<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amazingnick.kulina.MainActivity"
    tools:showIn="@layout/activity_main">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_weight="5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:background="@drawable/thai"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="6dp"
            android:background="@drawable/yellowbubble"
            android:text="@string/string8"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#80f44336"
            android:paddingTop="10dp"
            android:paddingLeft="110dp"
            android:text="@string/string7"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/string6"
        android:textStyle="bold"
        android:textSize="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/string5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_weight="1.3"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/string2"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="3"
        android:background="@color/gray"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="10dp"
            android:text="@string/string3"
            android:textSize="20dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/string4"
            android:textColor="@color/white"
            android:background="@drawable/button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/gps"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:text="@string/string1"/>
    </LinearLayout>
</LinearLayout>
